remove button height to fix distortion after upload

--- a/css/studio-flat.css
+++ b/css/studio-flat.css
@@ -61,7 +61,6 @@ h6{
 
 .form-managed-file .form-submit{
   position: absolute;
-  height:100%;
   top:0;
   right:0;
   padding:.6rem;
